--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .open {
+    @apply h-16 opacity-100 overflow-y-auto;
+  }
+}
